# dotx

./: .envrc  .gitignore  ALTERNATIVES.md  CHANGELOG.md  LICENSE  MANIFEST.in  MARKETING.md  README.md  TODO.md  cli.py  pyproject.toml  requirements-dev.txt
dot/: ignore.py  install.py  plan.py
dotfiles/: ignore.py  install.py  options.py  plan.py  uninstall.py
notebooks/: libzmq.5.dylib  working on dot.ipynb
notebooks/.ipynb_checkpoints/: working on dot-checkpoint.ipynb
src/: cli.py
src/dotx/: __init__.py  always-create  cli.py  database.py  dotxignore  hierarchy.py  ignore.py  install.py  installed-schema.sql  options.py  plan.py  uninstall.py
src/dotx/commands/: __init__.py  database.py  install_cmd.py  path_cmd.py  progress.py  uninstall_cmd.py
tests/: conftest.py  test_always_create.py  test_cli.py  test_cli_database.py  test_ignore.py  test_ignore_rules.py  test_install.py  test_options.py  test_path_which.py  test_plan.py  test_uninstall.py
