[project]
name = "dotx"
version = "1.1.0"
description = "A command-line tool to install a link-farm to your dotfiles"
authors = [
    { name = "Wolf", email = "Wolf@zv.cx" }
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.1.7",
    "loguru>=0.7.0",
    "pathspec>=0.12.1",
    "typer>=0.15.1",
]

[dependency-groups]
dev = [
    "black>=24.10.0",
    "coverage>=7.6.9",
    "ipython>=8.30.0",
    "isort>=5.13.2",
    "pre-commit>=4.0.1",
    "pyrefly>=0.0.1",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "python-lsp-server>=1.12.0",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--verbose",
    "--cov=src/dotx",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.coverage.run]
source = ["src/dotx"]
branch = true
omit = [
    "tests/*",
    "*/tests/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
precision = 2
show_missing = true

[tool.coverage.html]
directory = "htmlcov"
