[project]
name = "dotx"
version = "3.1.1"
description = "A command-line tool to install a link-farm to your dotfiles"
authors = [
    { name = "Wolf", email = "Wolf@zv.cx" }
]
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.13"
keywords = ["dotfiles", "symlinks", "configuration", "link-farm"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.1.7",
    "loguru>=0.7.0",
    "pathspec>=0.12.1",
    "rich>=13.9.4",
    "typer>=0.15.1",
]

[project.urls]
Homepage = "https://github.com/wolf/dotx"
Repository = "https://github.com/wolf/dotx"
Issues = "https://github.com/wolf/dotx/issues"

[project.scripts]
dotx = "dotx.cli:cli"

[dependency-groups]
dev = [
    "black>=24.10.0",
    "coverage>=7.6.9",
    "ipython>=8.30.0",
    "isort>=5.13.2",
    "pre-commit>=4.0.1",
    "pyrefly>=0.0.1",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "python-lsp-server>=1.12.0",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--verbose",
    "--cov=src/dotx",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.coverage.run]
source = ["src/dotx"]
branch = true
omit = [
    "tests/*",
    "*/tests/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
precision = 2
show_missing = true

[tool.coverage.html]
directory = "htmlcov"
